--- a/frame/aura/Cargo.toml
+++ b/frame/aura/Cargo.toml
@@ -22,7 +22,7 @@ frame-support = { version = "3.0.0", default-features = false, path = "../suppor
 sp-consensus-aura = { version = "0.9.0", path = "../../primitives/consensus/aura", default-features = false }
 frame-system = { version = "3.0.0", default-features = false, path = "../system" }
 pallet-timestamp = { version = "3.0.0", default-features = false, path = "../timestamp" }
-log = { version = "0.4.14", default-features = false }
+log = "0.4.8"
 
 [dev-dependencies]
 sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }
