--- a/primitives/core/Cargo.toml
+++ b/primitives/core/Cargo.toml
@@ -33,7 +33,7 @@ zeroize = { version = "1.2.0", default-features = false }
 secrecy = { version = "0.7.0", default-features = false }
 lazy_static = { version = "1.4.0", default-features = false, optional = true }
 parking_lot = { version = "0.11.1", optional = true }
-sp-debug-derive = { version = "3.0.0", path = "../debug-derive" }
+sp-debug-derive = { version = "3.0.0", default-features = false, path = "../debug-derive" }
 sp-externalities = { version = "0.9.0", optional = true, path = "../externalities" }
 sp-storage = { version = "3.0.0", default-features = false, path = "../storage" }
 parity-util-mem = { version = "0.9.0", default-features = false, features = ["primitive-types"] }
