--- a/client/network/Cargo.toml
+++ b/client/network/Cargo.toml
@@ -57,6 +57,7 @@ sp-core = { version = "4.0.0-dev", path = "../../primitives/core" }
 sp-runtime = { version = "4.0.0-dev", path = "../../primitives/runtime" }
 sc-utils = { version = "4.0.0-dev", path = "../utils" }
 sp-finality-grandpa = { version = "4.0.0-dev", path = "../../primitives/finality-grandpa" }
+sp-std = { version = "4.0.0-dev", path = "../../primitives/std" }
 thiserror = "1"
 unsigned-varint = { version = "0.6.0", features = [
     "futures",
