--- a/client/consensus/common/Cargo.toml
+++ b/client/consensus/common/Cargo.toml
@@ -26,6 +26,7 @@ sp-state-machine = { version = "0.10.0-dev", path = "../../../primitives/state-m
 sp-runtime = { version = "4.0.0-dev", path = "../../../primitives/runtime" }
 sc-utils = { version = "4.0.0-dev", path = "../../utils" }
 sp-api = { version = "4.0.0-dev", path = "../../../primitives/api" }
+sp-std = { version = "4.0.0-dev", path = "../../primitives/std" }
 parking_lot = "0.11.1"
 serde = { version = "1.0", features = ["derive"] }
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../../utils/prometheus", version = "0.9.0" }
